# cse169_code

./: CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
include/: Animation.h  Channel.h  DOF.h  Joint.h  Keyframe.h  Player.h  Skeleton.h  Skin.h  Triangle.h  Vertex.h
shaders/: point.frag  point.vert
src/: Animation.cpp  Channel.cpp  DOF.cpp  Joint.cpp  Keyframe.cpp  Shader.cpp  Skeleton.cpp  Skin.cpp  Tokenizer.cpp  Triangle.cpp  Vertex.cpp  Window.cpp
